--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -18,6 +18,11 @@ jobs:
     # 在 Ubuntu 上运行
     runs-on: ubuntu-latest
     steps:
+      - run: sudo rm -rf /usr/share/dotnet
+      - run: sudo rm -rf /opt/ghc
+      - run: sudo rm -rf "/usr/local/share/boost"
+      - run: sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+      
       # git checkout 代码
       - name: Checkout
         uses: actions/checkout@v2
